fix horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -4,14 +4,20 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html {
     scroll-behavior: smooth;
+    max-width: 100%;
 }
 
 body {
     background-color: #f1f1f1 !important;
+    width: 100%;
+    overflow-x: hidden;
+
+
 }
 
 .container {
